--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.10
   firebase_core: ^2.7.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
