--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.7.1
   provider: ^6.0.5
   cloud_firestore: ^4.4.4
+  google_sign_in: ^6.0.2
+  share_plus: ^6.3.1
 
 dev_dependencies:
   flutter_test:
