--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
+/android/app/src/main/res/values/strings.xml
 # Symbolication related
 app.*.symbols
 
