--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.4.4
   google_sign_in: ^6.0.2
   share_plus: ^6.3.1
+  flutter_facebook_auth: ^5.0.8
 
 dev_dependencies:
   flutter_test:
